ChangeLog for PCRE
------------------

Version 7.1 05-Mar-07
---------------------

 1. Applied Bob Rossi and Daniel G's patches to convert the build system to one 
    that is more "standard", making use of automake and other autotools. There 
    is some re-arrangement of the files and adjustment of comments consequent
    on this.
    
 2. I had an email from Eric Raymond about problems translating some of PCRE's
    man pages to HTML (despite the fact that I distribute HTML pages, some 
    people do their own conversions for various reasons). The problems 
    concerned the use of low-level troff macros .br and .in. I have therefore 
    removed all such uses from the man pages (some were redundant, some could 
    be replaced by .nf/.fi pairs). The maintain/132html script that I use to 
    generate HTML has been updated to handle .nf/.fi and to complain if it 
    encounters .br or .in.
    

Version 7.0 19-Dec-06
---------------------

 1. Fixed a signed/unsigned compiler warning in pcre_compile.c, shown up by
    moving to gcc 4.1.1.

 2. The -S option for pcretest uses setrlimit(); I had omitted to #include
    sys/time.h, which is documented as needed for this function. It doesn't
    seem to matter on Linux, but it showed up on some releases of OS X.

 3. It seems that there are systems where bytes whose values are greater than
    127 match isprint() in the "C" locale. The "C" locale should be the
    default when a C program starts up. In most systems, only ASCII printing
    characters match isprint(). This difference caused the output from pcretest
    to vary, making some of the tests fail. I have changed pcretest so that:

    (a) When it is outputting text in the compiled version of a pattern, bytes
        other than 32-126 are always shown as hex escapes.

    (b) When it is outputting text that is a matched part of a subject string,
        it does the same, unless a different locale has been set for the match